--- a/src/components/Radio/style.css
+++ b/src/components/Radio/style.css
@@ -1,22 +1,48 @@
 .radioName{
-    font-family: "Righteous", serif;
-    /* font-weight: 400;
-    font-style: normal; */
+    font-family: "Urbanist", serif;
+    font-weight: 400;
     background-color: transparent;
     color: #848484;
     transition: all ease-out 0.5s;
     min-width: 28rem;
 }
 
-.radioName:hover{
+/* .radioName:hover{
     color: white;
     scale: 1.02;
-}
+} */
 
 .title{
-    letter-spacing:0.2em;
+    letter-spacing:0.1em;
 }
 
 .min{
     letter-spacing:0.1em;
+}
+
+@media (max-width: 480px) {
+.radioName{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin: 0.2rem 2rem;
+    justify-content: space-between;
+    border-bottom: 1px solid #848484;
+}
+.title-container{
+    order: 3;
+    flex-basis: 100%;
+}
+.min{
+    order: 1;
+    flex-basis: 30%;
+}
+.host{
+    order: 2;
+    flex-basis: 50%;
+}
+
 }
